--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Deep Neural Machine
+title:       Rohith R Nair
 email:       rohithrnair@outlook.com
 author:      Rohith R Nair
 description: "Creating the future isn't Magic. It's Artificial Intelligence"
