--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title:       Rohith R Nair
+title:       Artificial Intelligence
 email:       rohithrnair@outlook.com
-author:      Rohith R Nair
+author:      codeslord
 description: "Creating the future isn't Magic. It's Artificial Intelligence"
 baseurl:     ""
 url:         "http://codeslord.github.io"
