--- a/_config.yml
+++ b/_config.yml
@@ -112,6 +112,8 @@ text:
 
 # Build settings
 markdown:     kramdown
+kramdown:
+  math_engine: katex
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
