--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ share_stumbleupon: false
 share_hackernews: false
 #buy me a coffee
 show_buymeacoffee: true
-buymeacoffee_username: rohithragh2
+buymeacoffee_username: rohithrnair
 
 text:
   pagination:
