--- a/_config.yml
+++ b/_config.yml
@@ -117,6 +117,16 @@ text:
 markdown:     kramdown
 kramdown:
   math_engine: katex
+  input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    default_lang: python
+    css_class: 'highlight'
+    # span:
+    #   line_numbers: false
+    # block:
+    #   line_numbers: true
+    #   start_line: 1
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
