--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Artificial Intelligence
+title:       Robotics & Artificial Intelligence
 email:       rohithrnair@outlook.com
 author:      codeslord
 description: "Creating the future isn't Magic. It's Artificial Intelligence"
