--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ ajaxify_contact_form: false
 enable_mathjax: false
 extended_fonts: false
 enable_anchorjs: false
+enable_mermaid: true
 # Preview image for social media aka og:image and twitter:image
 post_preview_image: false
 
